--- a/backend/public/css/addMatch.css
+++ b/backend/public/css/addMatch.css
@@ -76,3 +76,64 @@
     margin-bottom: 5px;
     font-weight: bold;
 }
+
+.match {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background: #f4f4f4;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.match-form {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+.add-match-button {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 15px;
+    border-width: 3px;
+    border-color: aquamarine;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    margin-left: 90%;
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(146, 142, 142, 0.662);
+    z-index: 5;
+}
+
+.team-info {
+    display: flex;
+    align-items: center;
+}
+
+.team-info img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.match-details {
+    text-align: center;
+}
