--- a/backend/views/pages/match.ejs
+++ b/backend/views/pages/match.ejs
@@ -15,6 +15,9 @@
     <div class="center">
         <div class="w-1080">
             <%- include ('../partials/header') %>
+            <div style="margin-top: 20px;">
+                <a  class="app_button--primary"  href="/api/v1/playermatch/edit" type="button" class="btn btn-primary">Edit Match</a>
+            </div>
             <div class="match__season">
                 <select class="match__seasonSelect" id="seasonSelect">
                     <%
