--- a/backend/views/pages/editevent.ejs
+++ b/backend/views/pages/editevent.ejs
@@ -62,8 +62,8 @@
                 <div id="select_card" class="hidden-element" style="width: 45%;margin-top: 10px;">
                     <p style="margin-bottom: 10px;">Select card</p>
                     <select class="form-select" aria-label="Default select example" name="card" required>
-                        <option value="1">Yellow</option>
-                        <option value="2">Red</option>
+                        <option value="yellow">Yellow</option>
+                        <option value="red">Red</option>
                       </select>
                 </div>
                 <input style="padding: 4px 6px;background-color: crimson;color: white;border-radius: 4px;margin-top: 20px;"  type="submit" value="Update">                  
